static/index.css
/* General Styles */
body {
    font-family: 'Inter', Arial, sans-serif;
    margin: 0;
    padding: 0;
    color: white;
    background-color: #000;
    padding-top: 80px;
    overflow-x: hidden;
}

header {
    background-color: #212121;
    z-index: 1000;
    padding: 20px 40px;
    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
    position: fixed;
    top: 0;
    width: 100%;
    max-width: 100%;
    margin: 0;
}

.navbar {
    display: flex;
    justify-content: space-between;
    color: white;
    align-items: center;
    max-width: 1200px;
    margin: 0 auto;
    width: 100%;
    padding: 0 40px;
}


.nav-links {
    list-style-type: none;
    display: flex;
    color: white;
    gap: 20px;
}

.nav-links a {
    text-decoration: none;
    color: white;
    font-size: 16px;
}

.nav-links a:hover {
    color: #7089e2;
}

.logo a {
    color: white;
    text-decoration: none;
    font-size: 24px;
    font-weight: bold;
}

.logo a:hover {
    color: #1DB954;
}

/* Hero Section */
.hero {
    /* display: flex; */
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    padding: 120px;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    height: 280px;
    z-index: 1;
}

.hero h1 {
    font-size: 40px;
    margin-bottom: 10px;
    color: #1DB954;
    text-shadow: 10px 10px 20px rgb(99, 99, 99);
}

.hero p {
    font-size: 16px;
    color: white;
    margin-top: 0px;
    margin-bottom: 20px;
    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
}

.cta-button-large {
    background-color: #1DB954;
    color: white;
    padding: 15px 30px;
    border: none;
    border-radius: 25px;
    font-size: 20px;
    cursor: pointer;
    margin-top: 20px;
    display: inline-block;
    margin-bottom: 10px;
}

.cta-button-large:hover {
    background-color: #25904C;
}

.cta-button-large:disabled {
    background-color: #cccccc;
    cursor: not-allowed;
}

a {
    text-decoration: none;
  }


/* Text Alignment and Spacing */
.center-justify {
    text-align: center;
    max-width: 800px;
    margin: 0 auto;
    line-height: 1.8;
    margin-top: 20px;
    margin-bottom: 20px;
}

.center-justify h1 {
    font-size: 40px;
    margin-bottom: 10px;
    color: #1DB954;
    text-shadow: 10px 10px 20px rgb(99, 99, 99);
}

.center-justify h2 {
    text-align: center;
    font-size: 30px;
    color: white;
    padding: 5px;
}

.center-justify h3 {
    text-align: center;
    font-size: 20px;
    color: white;
    padding: 5px;
}

.center-justify h4 {
    text-align: justify;
    font-size: 18px;
    color: white;
    padding: 5px;
}

.center-justify h4 b {
    text-align: justify;
    font-size: 18px;
    color: #7089e2;
    padding-right: 1px;
}

.center-justify p {
    margin-bottom: 30px;
    text-align: justify;
}

.center-justify p li {
    text-align: justify;
}

.center-justify ol,
.center-justify ul
.center-justify div {
    text-align: left;
}

/* Results page */
.profile-link {
    color: #007BFF;
    text-decoration: none;
    font-weight: bold;
}

.profile-link:hover {
    text-decoration: underline;
}

ul {
    list-style: none;
    padding: 0;
}

ul li {
    background: #212121;
    margin: 5px 0;
    padding: 10px;
    border-radius: 5px;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
}


input[type="email"] {
  width: 100%;
  max-width: 300px;
}

.extra-container {
    display: flex;
    justify-content: center;
    margin-top: 20px;
    flex-direction: column;
    align-items: center;
}


/* Donation section */
.donation-section {
    text-align: center;
    margin-top: 30px;
    padding: 20px;
    background: black;
}
.donation-section p {
    margin-bottom: 10px;
    font-size: 1rem;
    color: white;
}
.donation-section button {
    background-color: black;
    color: black;
    font-size: 1rem;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s ease;
}
.donation-section button:hover {
    background-color: #005c99;
}

/* Images */
.image-gallery {
    display: flex;
    gap: 10px;
    justify-content: center;
    flex-wrap: wrap;
    margin-top: 10px;
}
.image-container {
    width: 150px;
    height: 150px;
    overflow: hidden;
    border-radius: 8px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}
.image-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

/* Playlist table */
.playlist-table {
    width: 100%;
    border-spacing: 0;
    overflow: hidden;
    border-collapse: separate;
    margin-top: 20px;
}
.playlist-table tr:first-child th:first-child {
    border-top-left-radius: 10px;
}
.playlist-table tr:first-child th:last-child {
    border-top-right-radius: 10px;
}
.playlist-table tr:last-child td:first-child {
    border-bottom-left-radius: 10px;
}
.playlist-table tr:last-child td:last-child {
    border-bottom-right-radius: 10px;
}
.playlist-table th, .playlist-table td {
    text-align: left;
    padding: 10px;
    border: 1px solid #1db954;
}
.playlist-table th {
    background-color: #212121;
    color: #ffffff;
    font-weight: bold;
}
/* .playlist-table tr:hover { */
/*     background-color: #f9f9f9; */
/* } */
.track-image {
    width: 50px;
    height: 50px;
    border-radius: 4px;
    object-fit: cover;
}
.playlist-table td {
    vertical-align: middle;
    background-color: #212121;
}
.preview-btn {
    padding: 5px 10px;
    background-color: #1DB954;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 14px;
    transition: background-color 0.3s ease;
}
.preview-btn:hover {
    background-color: #1ed760;
}
.preview-btn:disabled {
    background-color: #666;
    cursor: not-allowed;
}

/* post button */
.btn {
    background-color: #1DB954;
    color: white;
    padding: 15px 30px;
    border: none;
    border-radius: 25px;
    font-size: 20px;
    cursor: pointer;
    margin-top: 20px;
    display: inline-block;
    margin-bottom: 10px;
}

.btn:hover {
    background-color: #25904C;
}

.btn:disabled {
    background-color: #cccccc;
    cursor: not-allowed;
}

/* General Mobile Responsiveness */
@media (max-width: 600px) {
    body {
        font-size: 0.875rem;
    }

    .container {
        padding: 10px;
    }

    .hero {
        padding: 50px 20px;
        height: auto;
        background-size: cover;
    }

    .hero h1 {
        font-size: 24px;
    }

    .hero p {
        font-size: 14px;
    }

    .device-instructions-flex {
        flex-direction: column;
        gap: 10px;
    }

    .chronotype-item {
        flex-direction: column;
        gap: 10px;
    }

    .chronotype-icon {
        width: 50px;
    }

    .device-instructions-container {
        flex-direction: column;
        max-width: 100%;
        margin: 20px 0;
    }

    .center-justify {
        max-width: 100%;
        padding: 10px;
    }

    #drag-drop-area {
        max-width: 90%;
        /* Adjust this percentage as needed */
        padding: 20px;
        /* Reduce padding for smaller screens */
    }

    /* Ensure the menu-container holds the hamburger and the nav-links */
    .menu-container {
        display: flex;
        flex-direction: column;
        align-items: flex-end;
    }

    .nav-links a {
        text-decoration: none;
        color: white;
        font-size: 4px;
    }

    /* Hamburger icon should always be visible */
    .hamburger {
        display: flex;
        font-size: 28px;
        margin-left: auto;
    }

    /* When the 'active' class is added, show the nav-links */
    .nav-links.active {
        display: flex;
        flex-direction: column;
        position: sticky;
        top: 60px;
        right: 0px;
        background-color: white;
        padding: 10px;
        box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
        z-index: 1000;
    }

    .nav-links.active a {
        text-decoration: none;
        color: white;
        font-size: 16px;
    }

    /* Ensure links look good in mobile */
    .nav-links li {
        margin: 10px 0;
    }

    #plotContainer {
        width: 100%;
        /* Make sure the plot takes up 100% of the mobile screen */
        max-width: 100%;
        padding: 0;
        /* No padding on mobile */
    }

    .bk-root {
        width: 100%;
        /* Ensure the Bokeh plot itself fits within the container */
        max-width: 100%;
        overflow-x: auto;
        /* Allow the plot to scroll horizontally if needed */
    }

}

